tests/specs/ecosystem/ayonli/jsext/0_8_21.test
ayonli/jsext/0.8.21
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2411 [ERROR]: Property '_' of type 'string | number | boolean | (string | number | boolean)[] | undefined' is not assignable to 'string' index type 'string | number | boolean | (string | number | boolean)[]'.
  _?: string | number | boolean | (string | number | boolean)[];
  ^
    at file://<tmpdir>/cli.ts:50:3

TS2503 [ERROR]: Cannot find namespace 'NodeJS'.
 */ export default function read<T>(target: NodeJS.EventEmitter, eventMap?: {
                                            ~~~~~~
    at file://<tmpdir>/read.ts:79:45

Found 2 errors.

